rendered/envs/alpha/vmks/ingressroute-victoria-metrics-lan.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  annotations:
    a8r.io/repository: https://github.com/Zebradil/myks-homelab
  name: victoria-metrics-lan
spec:
  entryPoints:
    - lan-web
    - lan-websecure
  routes:
    - kind: Rule
      match: Host(`victoria-metrics.lan.zebradil.dev`) || Host(`victoria-metrics.gray.lan.zebradil.dev`) || Host(`victoria-metrics.junior.lan.zebradil.dev`)
      services:
        - name: vmsingle-vmks-victoria-metrics-k8s-stack
          port: http
